--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT =2000
 DB=mongodb+srv://PHUniversity:Fil5aVYVgE2j5BUf@mongodb.invywoo.mongodb.net/PHUniversity?retryWrites=true&w=majority&appName=mongoDB
 
 DEFAULT_PASS=phuniversity123
+NODE_ENV = development
